--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ title: Blog
   {% for post in site.posts %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
+      <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
 </ul>
