--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,7 @@ title: Blog
 <ul>
   {% for post in site.posts %}
     <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <p>{{ post.excerpt }}</p>
+      <h3><a href="{{ post.url }}">{{ post.title }} - {{ post.description }}</a></h3>      
     </li>
   {% endfor %}
 </ul>
